--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: [VioletBenin's]
+description: [A private website for recording.]
+show_downloads: [false]
+# google_analytics: [Your Google Analytics tracking ID]
