--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: [VioletBenin's]
 description: [A private website for recording.]
-show_downloads: [false]
+# show_downloads: [false]
 # google_analytics: [Your Google Analytics tracking ID]
